--- a/FullyReact/20-the-wild-oasis-website/package.json
+++ b/FullyReact/20-the-wild-oasis-website/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "prod": "next build && next start",
@@ -13,9 +13,9 @@
     "@heroicons/react": "^2.2.0",
     "@supabase/supabase-js": "^2.47.12",
     "date-fns": "^4.1.0",
-    "next": "15.1.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "next": "14.2.23",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
