--- a/FullyReact/20-the-wild-oasis-website/package.json
+++ b/FullyReact/20-the-wild-oasis-website/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.47.12",
     "date-fns": "^3.0.0",
     "next": "14.2.23",
+    "next-auth": "^5.0.0-beta.25",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0"
